Fix remaining spotbugs issues and enable PR blocking